# carla-simulation-control

./: .gitignore  README.md  __init__.py  app.py  get_labels.py  history.db  history.db-shm  history.db-wal  labels.json  labels.txt  main.py  pyproject.toml  refactor.py  requirements.txt  start.bat  start.sh
config/: __init__.py  db.py  socket.py  state.py
core/: background.py  camera.py  database.py  vehicles.py
routes/: blueprints_api.py  camera.py  connection.py  destroy.py  environment.py  history.py  lane.py  main.py  socket.py  spawner.py  spectator.py  traffic.py  vehicles.py  weather.py
static/css/: styles.css
static/js/: api.js  connection.js  environment.js  main.js  media.js  script.js  spawn.js  spectator.js  traffic.js  weather.js
templates/: index.html
threads/: debug_bboxes.py  stream.py
utils/: behaviour.py  cache.py  helpers.py
