# d:\DEV\CodeBase\MAIN_PRO\AI_TRAFFIC\CARLA_CONTROL\pyproject.toml
[project]
name = "carla-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "carla>=0.9.16",
    "flask>=3.1.3",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
]
